<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="@dimen/default_margin"
    app:strokeColor="@color/md_theme_dark_surfaceVariant"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/double_default">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagen"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombre"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagen" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nombre">

            <TextView
                android:id="@+id/marca"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="@dimen/default_margin" />

            <TextView
                android:id="@+id/fabricante"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_margin" />
        </LinearLayout>

        <TextView
            android:id="@+id/descripcion"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll1" />

        <TextView

            android:id="@+id/tipo"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descripcion" />

        <TextView
            android:id="@+id/precio"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tipo" />

        <TextView
            android:id="@+id/url"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/precio" />

        <TextView
            android:id="@+id/sistemas"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/sistemas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url" />
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sistemas">

            <ImageView
                android:id="@+id/google"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@drawable/ic_google_brands"
                android:contentDescription="@string/logo_google" />

            <ImageView

                android:id="@+id/amazon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@drawable/ic_amazon_brands"
                android:contentDescription="@string/logo_amazon"  />

            <ImageView

                android:id="@+id/apple"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@drawable/ic_apple_brands"
                android:contentDescription="@string/logo_apple" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="9dp"
            android:paddingEnd="0dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_baseline_favorite_24"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toStartOf="@id/personal"
            app:layout_constraintTop_toBottomOf="@id/ll2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/personal"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="9dp"
            android:paddingEnd="0dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_baseline_playlist_add_check_24"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@id/like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/like" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>